fixing scroll and overflow bug

--- a/css/home.css
+++ b/css/home.css
@@ -709,7 +709,7 @@ iframe {
 .absolute-cart {
   z-index: 1000;
   width: 14%;
-  height: 80px;
+  height: 65px;
   position: fixed;
   bottom: 5%;
   left: 3%;
